# flappy_bird_ai

./: .gitignore  flappy.py  setup.cfg
flappy_bird_ai/: __init__.py  controller.py  flappy.py
