[metadata]
name = flappy_bird_ai
version = attr: ani_torch.VERSION
description = A version of Flappy for illustrating some AI methods.
long_description = file: README.md
license = BSD 3-Clause License

[options]
zip_safe = False
include_package_data = True
packages = find:
;scripts =
;  bin/first.py
;  bin/second.py
install_requires =
   pygame

[options.package_data]
* = *.txt, *.rst
;hello = *.msg

;[options.extras_require]
;pdf = ReportLab>=1.2; RXP
;rest = docutils>=0.3; pack ==1.1, ==1.3

;[options.packages.find]
;exclude =
;    src.subpackage1
;    src.subpackage2
